MDEV-4591:Setting gtid* values from inside a transaction might cause unexpected results

Now we give an error on attempts to set @@SESSION.gtid_domain_id or
@@SESSION.gtid_seq_no when a transaction is active.